syntax = "proto3";

option go_package = "github.com/rafaeldiazmiles/FinalProjectGlobantGo/gRPC/pkg/proto";

package proto;


service UserService{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}
}

message Status {
    int32 code = 1;
    string message = 3;
}

message CreateUserRequest {
    string name = 1;
    string pwd = 3;
    uint32 age = 5;
    string addInfo = 7;
}
message CreateUserResponse {
    uint32 id = 1;
    Status status = 3;
}

message GetUserRequest {
    uint32 id = 1;
}

message GetUserResponse {
    string name = 1;
    uint32 age = 3;
    string addInfo = 5;
    Status status = 7;
}

